# ShuaiTravelAgent

./: .gitignore  README.md  pytest.ini  run_agent.py  run_api.py
.claude/: settings.local.json
agent/: __init__.py  pyproject.toml
agent/proto/: agent.proto
agent/src/: __init__.py  server.py
agent/src/config/: __init__.py  config_manager.py  settings.py
agent/src/core/: __init__.py  react_agent.py  travel_agent.py
agent/src/environment/: __init__.py  travel_data.py
agent/src/llm/: __init__.py  client.py  factory.py
agent/src/memory/: __init__.py  manager.py
agent/src/reasoner/: __init__.py
agent/src/tools/: __init__.py
config/: llm_config_examples.json
docs/: API.md  ARCHITECTURE.md  DEPLOY.md  DEVELOP.md
frontend/: .env.development  .env.example  .env.production  DEPLOYMENT.md  Dockerfile  Dockerfile.allinone  README.md  TESTING.md  docker-compose.yml  index.html  next.config.js  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AntdConfig.tsx  ChatArea.tsx  MessageList.tsx  Sidebar.tsx  TaskSteps.tsx
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: index.ts
frontend/tests/: setup.ts
shared/: __init__.py  constants.py
shared/proto/: __init__.py
shared/types/: api.py  message.py  session.py
src/shuai_travel_agent/: agent.py  app.py  io_handler.py  llm_client.py  logger_manager.py  react_agent.py  streamlit_app.py
web/: __init__.py  pyproject.toml
web/src/: __init__.py  main.py
(+32 files in other folders)
